<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iSchool</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_back">返回</string>
    <string name="select_range">请选择发送范围</string>
    <string name="select_obj">请选择发送对象</string>
    <string name="select_500">500m</string>
    <string name="select_1000">1000m</string>
    <string name="select_2000">2000m</string>
    
    <string name="sms_login_title">用户登录</string>    
    <string name="sms_login_hint1">输入用户名</string>    
    <string name="sms_login_hint2">输入密码</string>    
    <string name="sms_login_signUp">注册</string>    
    <string name="sms_login_confirm">登录</string>    
    <string name="sms_login_checkBox">保存账号密码</string>    
    <string name="sms_login_autoLogIn">自动登录</string>    
    
    <string name="sms_signup_title">注册新用户</string>    
    <string name="sms_signup_userName">输入用户名</string>    
    <string name="sms_signup_userName_lable">用户名</string>    
    <string name="sms_signup_pwd">输入密码(6到15位)</string>    
    <string name="sms_signup_pwd_lable">密码</string>    
    <string name="sms_signup_pwd2">确认密码</string> 
    <string name="sms_signup_pwd2_lable">确认</string> 
    <string name="sms_signup_name">输入昵称</string>  
    <string name="sms_signup_name_lable">昵称</string>  
    <string name="sms_signup_sex">性别</string>  
    <string name="sms_signup_sex_lable">性别</string>  
    <string name="sms_signup_email">电子邮件</string>    
    <string name="sms_signup_email_lable">邮件</string>    
    <string name="sms_signup_telnum">电话号码</string>    
    <string name="sms_signup_telnum_lable">电话</string>    
    <string name="sms_signup_confirm">确认</string>    
    <string name="sms_signup_cancel">取消</string>    
    <string name="sms_signup_notice">红色标识的内容必填</string>    
    <string name="sms_signup_txt">正在注册……</string>    
    <string name="sms_signup_dialog_username">您的用户名</string>    
    <string name="sms_signup_dialog_nickname">您的昵称</string>    
    <string name="sms_signup_dialog_confirm">确定</string>  
     
    <string name="sms_title_text1">消息内容</string>
    <string name="sms_title_title">消息标题</string>
    <string name="sms_title_title_hint">输入标题</string>
    <string name="sms_title_text2">输入消息内容</string>
    <string name="sms_title_text3">发送</string>
    <string name="sms_select_friends">仅发送给好友</string>
    <string name="sms_select_round">发送给所有人</string>
     
    <string name="sms_mydata_loadmore">点击加载更多</string> 
    
    <string name="result_userId_hint">输入用户名</string>
    <string name="result_userPWD_hint">输入密码</string>
    <string name="result_savePwd">保存账号及密码</string>
    <string name="result_autoLogin">自动登录</string>
    <string name="result_Loging">正在登陆……</string>
    <string name="result_detail_title">成绩查询结果</string>
    <string name="result_detail_subject">科目</string>
    <string name="result_detail_point">学分</string>
    <string name="result_detail_result">成绩</string>
    <string name="result_detail_getDate">正在获取数据……</string>
    <string name="result_detail_refresh">刷新</string>
    <string name="result_detail_dialog_subj">课程名称</string>
    <string name="result_detail_dialog_point">课程学分</string>
    <string name="result_detail_dialog_result">课程成绩</string>
    <string name="result_detail_dialog_class">课程大类</string>
    <string name="result_detail_dialog_code">课程编码</string>
    <string name="result_detail_dialog_ins_subj">替代课程</string>
    <string name="result_detail_dialog_ins_point">替代学分</string>
    <string name="result_detail_dialog_ins_result">替代成绩</string>
    <string name="result_detail_dialog_ins_code">替代课程编码</string>
    
    <string name="query_classroom_btn_quick">快速查询</string>
    <string name="query_classroom_btn_advanced">高级查询</string>
    
    <string name="query_classroom_title">请选择要查询的教室信息</string>
    <string name="query_classroom_year">年度：</string>
    <string name="query_classroom_season">季别：</string>
    <string name="query_classroom_week">周次：</string>
    <string name="query_classroom_day">星期：</string>
    <string name="query_classroom_area">分区：</string>
    <string name="query_classroom_class">课节：</string>
    <string name="query_classroom_type">类型：</string>
    <string name="query_classroom_confirm">查询</string>
    
    <string name="classroom_detail_title">空教室查询结果</string>
    <string name="classroom_detail_name">教室名称</string>
    <string name="classroom_detail_area">分区</string>
    <string name="classroom_detail_type">类型</string>
    <string name="classroom_detail_volume">容量</string>
    <string name="classroom_detail_dialog_num">编号</string>
    <string name="classroom_detail_dialog_name">名称</string>
    <string name="classroom_detail_dialog_area">分区</string>
    <string name="classroom_detail_dialog_type">类型</string>
    <string name="classroom_detail_dialog_volume">容量</string>
    <string name="classroom_detail_dialog_time">时间</string>
    <string name="classroom_detail_dialog_state">状态</string>
    <string name="classroom_detail_dialog_belong">归属</string>
    <string name="classroom_detail_dialog_powerNum">电源数量</string>
    <string name="classroom_detail_dialog_netType">网络类型</string>
    <string name="classroom_detail_dialog_airCondition">空调</string>
   
    <string name="classroom_detail_show_info">根据您的经纬度信息，你现在的位置是：</string>
    <string name="classroom_detail_show_info2">系统将根据您的位置自动获取最近的空教室信息</string>
    
    <string name="schedule_detail_title">课程表查询结果</string>
    <string name="schedule_detail_mo">周一</string>
    <string name="schedule_detail_tu">周二</string>
    <string name="schedule_detail_we">周三</string>
    <string name="schedule_detail_th">周四</string>
    <string name="schedule_detail_fr">周五</string>
    <string name="schedule_detail_sa">周六</string>
    <string name="schedule_detail_su">周日</string>
    <string name="schedule_detail_dialog_name_lable">课程名称</string>
    <string name="schedule_detail_dialog_time_lable">上课时间</string>
    <string name="schedule_detail_dialog_place_lable">上课地点</string>
    <string name="schedule_detail_dialog_duration_lable">起止周次</string>
    <string name="schedule_detail_dialog_teacher_lable">任课教师</string>
    <string name="schedule_detail_dialog_com_lable">合班标识</string>
    <string name="schedule_detail_dialog_stu_lable">上课班级</string>
    
    <string name="schedule_alarm_unit1">第1—2节</string>
    <string name="schedule_alarm_unit2">第3—4节</string>
    <string name="schedule_alarm_unit3">第5—6节</string>
    <string name="schedule_alarm_unit4">第7—8节</string>
    <string name="schedule_alarm_unit5">第9—10节</string>
    
    <string name="setting_title_lable">系统设置</string>
    <string name="setting_tog_service">系统服务</string>
    <string name="setting_clear_search_count">清除查询功能的账号信息</string>
    <string name="setting_msg_count">设置消息界面每次更新的数量</string>
    <string name="setting_minTime">设置消息自动更新的时间间隔</string>
    <string name="setting_alarmTime">设置课程自动提醒的时间</string>
    <string name="setting_logout">注销登录</string>
    <string name="setting_about">关于</string>
    <string name="setting_btn_clear">清除</string>
    <string name="setting_btn_logout">注销</string>
    <string name="setting_btn_about">查看</string>
    <string name="setting_msg_num_title">点击输入</string>
    

    <string name="about_title_lable">关于</string>

    <string name="null_string">string</string>
    <string name="author">作者：</string>
    <string name="time">2012/9/12 12:32</string>
    
    <string name="toolbar_item_contentDescription"></string>
    

</resources>