<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/setting_msg_num_edit"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/setting_msg_num_title"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/setting_msg_num_btnConfirm"
            android:layout_width="80dp"
            android:layout_marginLeft="10dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/btn_confirm" />

        <Button
            android:id="@+id/setting_msg_num_btnCancel"
            android:layout_width="80dp"
            android:layout_marginRight="10dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/btn_back" />
    </RelativeLayout>

</LinearLayout>