<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dip" >

        <TextView
            android:id="@+id/name_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_detail_dialog_name_lable"
            android:textColor="@color/white"
            android:textSize="20dip" />

        <org.ischool.util.MyMarquee
            android:id="@+id/name_txt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:ellipsize="marquee"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/null_string"
            android:textColor="@color/white"
            android:textSize="20dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dip" >

        <TextView
            android:id="@+id/time_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_detail_dialog_time_lable"
            android:textColor="@color/white"
            android:textSize="20dip" />

        <org.ischool.util.MyMarquee
            android:id="@+id/time_txt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/null_string"
            android:textColor="@color/white"
            android:textSize="20dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dip" >

        <TextView
            android:id="@+id/place_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_detail_dialog_place_lable"
            android:textColor="@color/white"
            android:textSize="20dip" />

        <org.ischool.util.MyMarquee
            android:id="@+id/place_txt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/null_string"
            android:textColor="@color/white"
            android:textSize="20dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dip" >

        <TextView
            android:id="@+id/duration_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_detail_dialog_duration_lable"
            android:textColor="@color/white"
            android:textSize="20dip" />

        <org.ischool.util.MyMarquee
            android:id="@+id/duration_txt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/null_string"
            android:textColor="@color/white"
            android:textSize="20dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dip" >

        <TextView
            android:id="@+id/teacher_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_detail_dialog_teacher_lable"
            android:textColor="@color/white"
            android:textSize="20dip" />

        <org.ischool.util.MyMarquee
            android:id="@+id/teacher_txt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/null_string"
            android:textColor="@color/white"
            android:textSize="20dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dip" >

        <TextView
            android:id="@+id/com_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_detail_dialog_com_lable"
            android:textColor="@color/white"
            android:textSize="20dip" />

        <org.ischool.util.MyMarquee
            android:id="@+id/com_txt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/null_string"
            android:textColor="@color/white"
            android:textSize="20dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dip" >

        <TextView
            android:id="@+id/stu_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_detail_dialog_stu_lable"
            android:textColor="@color/white"
            android:textSize="20dip" />

        <org.ischool.util.MyMarquee
            android:id="@+id/stu_txt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/null_string"
            android:textColor="@color/white"
            android:textSize="20dip" />
    </LinearLayout>

</LinearLayout>